--- a/w1/build.gradle
+++ b/w1/build.gradle
@@ -26,6 +26,12 @@ dependencies {
 
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+  // https://mvnrepository.com/artifact/javax.servlet/jstl
+  implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
+
+  // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
+  implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.3.3'
 }
 
 test {
