p.290까지. 예외처리

--- a/springex/src/main/webapp/WEB-INF/web.xml
+++ b/springex/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,13 @@
             <param-name>contextConfigLocation</param-name>
             <param-value>/WEB-INF/servlet-context.xml</param-value>
         </init-param>
+
+        <!-- 주소 담당 Controller-method가 없을 때 예외 처리 설정 -->
+        <init-param>
+            <param-name>throwExceptionIfNoHandlerFound</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        
         <load-on-startup>1</load-on-startup>
     </servlet>
     
